--- a/OpenGL_Text9/OpenGL_Text9/OpenGL_Text9.vcxproj.filters
+++ b/OpenGL_Text9/OpenGL_Text9/OpenGL_Text9.vcxproj.filters
@@ -23,16 +23,16 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="OpenGL_Shader.h">
-      <Filter>源文件</Filter>
-    </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
     <None Include="fragmentShader.frag">
-      <Filter>源文件</Filter>
+      <Filter>资源文件</Filter>
     </None>
     <None Include="vertexShader.vert">
-      <Filter>源文件</Filter>
+      <Filter>资源文件</Filter>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="OpenGL_Shader.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
