--- a/OpenGL_Text2/OpenGL_Text2/OpenGL_Text2.vcxproj
+++ b/OpenGL_Text2/OpenGL_Text2/OpenGL_Text2.vcxproj
@@ -71,11 +71,13 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>E:\OpenGL\OpenGLEnvironment\include;$(IncludePath)</IncludePath>
-    <LibraryPath>E:\OpenGL\OpenGLEnvironment\lib-vc2019;$(LibraryPath)</LibraryPath>
+    <IncludePath>..\OpenGLEnvironment\include;$(IncludePath)</IncludePath>
+    <LibraryPath>..\OpenGLEnvironment\lib-vc2019;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
+    <IncludePath>..\OpenGLEnvironment\include;$(IncludePath)</IncludePath>
+    <LibraryPath>..\OpenGLEnvironment\lib-vc2019;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
@@ -106,6 +108,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>glfw3.lib;opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -141,7 +144,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\OpenGL\glad\src\glad.c" />
+    <ClCompile Include="..\OpenGLEnvironment\glad.c" />
     <ClCompile Include="program.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
