--- a/OpenGL_Text9/OpenGL_Text9/OpenGL_Text9.vcxproj.filters
+++ b/OpenGL_Text9/OpenGL_Text9/OpenGL_Text9.vcxproj.filters
@@ -31,7 +31,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\OpenGLEnvironment\OpenGL_Shader.h">
+    <ClInclude Include="..\OpenGLEnvironment\include\OpenGL_Shader.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
