--- a/OpenGL_Text13/OpenGL_Text13/OpenGL_Text13.vcxproj.filters
+++ b/OpenGL_Text13/OpenGL_Text13/OpenGL_Text13.vcxproj.filters
@@ -30,4 +30,20 @@
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="vertexShader.vert">
+      <Filter>资源文件</Filter>
+    </None>
+    <None Include="fragmentShader.frag">
+      <Filter>资源文件</Filter>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="container.jpg">
+      <Filter>资源文件</Filter>
+    </Image>
+    <Image Include="lwh&amp;ljz.jpg">
+      <Filter>资源文件</Filter>
+    </Image>
+  </ItemGroup>
 </Project>
