--- a/OpenGL_Test17/OpenGL_Test17/OpenGL_Test17.vcxproj
+++ b/OpenGL_Test17/OpenGL_Test17/OpenGL_Test17.vcxproj
@@ -143,6 +143,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\OpenGLEnvironment\glad.c" />
+    <ClCompile Include="ImGui\imgui.cpp" />
+    <ClCompile Include="ImGui\imgui_demo.cpp" />
+    <ClCompile Include="ImGui\imgui_draw.cpp" />
+    <ClCompile Include="ImGui\imgui_widgets.cpp" />
+    <ClCompile Include="ImGui\impl\imgui_impl_glfw.cpp" />
+    <ClCompile Include="ImGui\impl\imgui_impl_opengl3.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -154,6 +160,14 @@
   <ItemGroup>
     <ClInclude Include="..\OpenGLEnvironment\include\GLCamera.h" />
     <ClInclude Include="..\OpenGLEnvironment\include\GLShader.h" />
+    <ClInclude Include="ImGui\imconfig.h" />
+    <ClInclude Include="ImGui\imgui.h" />
+    <ClInclude Include="ImGui\imgui_internal.h" />
+    <ClInclude Include="ImGui\impl\imgui_impl_glfw.h" />
+    <ClInclude Include="ImGui\impl\imgui_impl_opengl3.h" />
+    <ClInclude Include="ImGui\imstb_rectpack.h" />
+    <ClInclude Include="ImGui\imstb_textedit.h" />
+    <ClInclude Include="ImGui\imstb_truetype.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
