--- a/OpenGLExample_01/OpenGLExample_01/OpenGLExample_01.vcxproj.filters
+++ b/OpenGLExample_01/OpenGLExample_01/OpenGLExample_01.vcxproj.filters
@@ -18,7 +18,7 @@
     <ClCompile Include="..\OpenGLEnvironment\glad.c">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="Program.cpp">
+    <ClCompile Include="main.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
