--- a/OpenGLExample_01/OpenGLExample_01/OpenGLExample_01.vcxproj
+++ b/OpenGLExample_01/OpenGLExample_01/OpenGLExample_01.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{91779909-9ea8-46eb-aebf-a64ffd3f52e6}</ProjectGuid>
     <RootNamespace>OpenGLTest1</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>OpenGLExample_01</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -143,7 +144,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\OpenGLEnvironment\glad.c" />
-    <ClCompile Include="Program.cpp" />
+    <ClCompile Include="main.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
