--- a/OpenGLExample_07/OpenGLExample_07/OpenGLExample_07.vcxproj.filters
+++ b/OpenGLExample_07/OpenGLExample_07/OpenGLExample_07.vcxproj.filters
@@ -15,10 +15,10 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="program.cpp">
+    <ClCompile Include="..\OpenGLEnvironment\glad.c">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="..\OpenGLEnvironment\glad.c">
+    <ClCompile Include="main.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
