--- a/OpenGLExample_22/OpenGLExample_22/OpenGLExample_22.vcxproj.filters
+++ b/OpenGLExample_22/OpenGLExample_22/OpenGLExample_22.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="src\Mesh.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="src\Model.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\OpenGLEnvironment\include\GLCamera.h">
@@ -33,6 +36,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="include\Mesh.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Model.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
