--- a/OpenGLExample_22/OpenGLExample_22/OpenGLExample_22.vcxproj
+++ b/OpenGLExample_22/OpenGLExample_22/OpenGLExample_22.vcxproj
@@ -145,11 +145,13 @@
     <ClCompile Include="..\OpenGLEnvironment\glad.c" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\Mesh.cpp" />
+    <ClCompile Include="src\Model.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\OpenGLEnvironment\include\GLCamera.h" />
     <ClInclude Include="..\OpenGLEnvironment\include\GLShader.h" />
     <ClInclude Include="include\Mesh.h" />
+    <ClInclude Include="include\Model.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
