--- a/OpenGLExample_22/OpenGLExample_22/OpenGLExample_22.vcxproj.filters
+++ b/OpenGLExample_22/OpenGLExample_22/OpenGLExample_22.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="src\Model.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="src\CreateWindow.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\OpenGLEnvironment\include\GLCamera.h">
@@ -39,6 +42,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="include\Model.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="include\CreateWindow.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
