--- a/OpenGLExample_22/OpenGLExample_22/OpenGLExample_22.vcxproj
+++ b/OpenGLExample_22/OpenGLExample_22/OpenGLExample_22.vcxproj
@@ -144,6 +144,7 @@
   <ItemGroup>
     <ClCompile Include="..\OpenGLEnvironment\glad.c" />
     <ClCompile Include="src\CreateWindow.cpp" />
+    <ClCompile Include="src\LightRenderConfig.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\Mesh.cpp" />
     <ClCompile Include="src\Model.cpp" />
@@ -152,6 +153,7 @@
     <ClInclude Include="..\OpenGLEnvironment\include\GLCamera.h" />
     <ClInclude Include="..\OpenGLEnvironment\include\GLShader.h" />
     <ClInclude Include="include\CreateWindow.h" />
+    <ClInclude Include="include\LightRenderConfig.h" />
     <ClInclude Include="include\Mesh.h" />
     <ClInclude Include="include\Model.h" />
   </ItemGroup>
