--- a/OpenGLExample_22/OpenGLExample_22/OpenGLExample_22.vcxproj.filters
+++ b/OpenGLExample_22/OpenGLExample_22/OpenGLExample_22.vcxproj.filters
@@ -30,7 +30,7 @@
     <ClCompile Include="src\CreateWindow.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="src\LightRenderConfig.cpp">
+    <ClCompile Include="src\Lamp.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
@@ -50,7 +50,7 @@
     <ClInclude Include="include\CreateWindow.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="include\LightRenderConfig.h">
+    <ClInclude Include="include\Lamp.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
