--- a/OpenGLExample_23/OpenGLExample_23/OpenGLExample_23.vcxproj
+++ b/OpenGLExample_23/OpenGLExample_23/OpenGLExample_23.vcxproj
@@ -18,6 +18,16 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="..\OpenGLEnvironment\glad.c" />
+    <ClCompile Include="src\create_window.cpp" />
+    <ClCompile Include="src\main.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\OpenGLEnvironment\include\gl_camera.h" />
+    <ClInclude Include="..\OpenGLEnvironment\include\gl_shader.h" />
+    <ClInclude Include="include\create_window.h" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
@@ -141,9 +151,6 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
-  <ItemGroup>
-    <ClCompile Include="OpenGLExample_23.cpp" />
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
