--- a/OpenGLExample_23/OpenGLExample_23/OpenGLExample_23.vcxproj
+++ b/OpenGLExample_23/OpenGLExample_23/OpenGLExample_23.vcxproj
@@ -20,13 +20,20 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\OpenGLEnvironment\glad.c" />
+    <ClCompile Include="src\builtin_obj.cpp" />
     <ClCompile Include="src\create_window.cpp" />
     <ClCompile Include="src\main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\OpenGLEnvironment\include\gl_camera.h" />
     <ClInclude Include="..\OpenGLEnvironment\include\gl_shader.h" />
+    <ClInclude Include="include\builtin_obj.h" />
+    <ClInclude Include="include\builtin_obj_data.h" />
     <ClInclude Include="include\create_window.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="shader\DepthTesting.frag" />
+    <None Include="shader\DepthTesting.vert" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
