--- a/OpenGLExample_23/OpenGLExample_23/OpenGLExample_23.vcxproj.filters
+++ b/OpenGLExample_23/OpenGLExample_23/OpenGLExample_23.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="src\builtin_obj.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="src\builtin_obj_data.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\OpenGLEnvironment\include\gl_camera.h">
