--- a/OpenGLExample_27/OpenGLExample_27/OpenGLExample_27.vcxproj.filters
+++ b/OpenGLExample_27/OpenGLExample_27/OpenGLExample_27.vcxproj.filters
@@ -39,6 +39,12 @@
     <ClCompile Include="shaders\post_process\post_process_shaders.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="src\mesh.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="src\model.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\builtin_obj.h">
@@ -57,6 +63,12 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="include\skybox_manager.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="include\mesh.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="include\model.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
