--- a/OpenGLExample_29/OpenGLExample_29/OpenGLExample_29.vcxproj
+++ b/OpenGLExample_29/OpenGLExample_29/OpenGLExample_29.vcxproj
@@ -148,30 +148,29 @@
   <ItemGroup>
     <ClInclude Include="res\builtin\shaders\post_process\post_process_shaders.hpp" />
     <ClInclude Include="src\builtin_data.hpp" />
-    <ClInclude Include="src\framebuffers_manager.h" />
+    <ClInclude Include="src\frame_buffer.h" />
     <ClInclude Include="src\geometry.h" />
     <ClInclude Include="src\gl_camera.h" />
-    <ClInclude Include="src\gl_shader.h" />
     <ClInclude Include="src\mesh.h" />
     <ClInclude Include="src\model.h" />
     <ClInclude Include="src\resource_manager.hpp" />
     <ClInclude Include="src\shader.h" />
-    <ClInclude Include="src\skybox_manager.h" />
+    <ClInclude Include="src\skybox.h" />
     <ClInclude Include="src\texture.hpp" />
-    <ClInclude Include="src\uniform_buffer_manager.h" />
+    <ClInclude Include="src\uniform_buffer.h" />
     <ClInclude Include="src\utility.hpp" />
     <ClInclude Include="src\window_manager.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="3rd_party\glad.c" />
-    <ClCompile Include="src\framebuffers_manager.cpp" />
+    <ClCompile Include="src\frame_buffer.cpp" />
     <ClCompile Include="src\geometry.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\mesh.cpp" />
     <ClCompile Include="src\model.cpp" />
     <ClCompile Include="src\shader.cpp" />
-    <ClCompile Include="src\skybox_manager.cpp" />
-    <ClCompile Include="src\uniform_buffer_manager.cpp" />
+    <ClCompile Include="src\skybox.cpp" />
+    <ClCompile Include="src\uniform_buffer.cpp" />
     <ClCompile Include="src\window_manager.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
