--- a/OpenGLExample_29/OpenGLExample_29/OpenGLExample_29.vcxproj.filters
+++ b/OpenGLExample_29/OpenGLExample_29/OpenGLExample_29.vcxproj.filters
@@ -18,13 +18,10 @@
     <ClInclude Include="src\builtin_data.hpp">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="src\framebuffers_manager.h">
+    <ClInclude Include="src\frame_buffer.h">
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="src\gl_camera.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
-    <ClInclude Include="src\gl_shader.h">
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="src\mesh.h">
@@ -33,10 +30,10 @@
     <ClInclude Include="src\model.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="src\skybox_manager.h">
+    <ClInclude Include="src\skybox.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="src\uniform_buffer_manager.h">
+    <ClInclude Include="src\uniform_buffer.h">
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="src\utility.hpp">
@@ -62,7 +59,7 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\framebuffers_manager.cpp">
+    <ClCompile Include="src\frame_buffer.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="src\main.cpp">
@@ -74,10 +71,10 @@
     <ClCompile Include="src\model.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="src\skybox_manager.cpp">
+    <ClCompile Include="src\skybox.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="src\uniform_buffer_manager.cpp">
+    <ClCompile Include="src\uniform_buffer.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="src\window_manager.cpp">
