--- a/OpenGLExample_29/OpenGLExample_29/OpenGLExample_29.vcxproj.filters
+++ b/OpenGLExample_29/OpenGLExample_29/OpenGLExample_29.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClInclude Include="src\shader.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="src\render_to.hpp">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\frame_buffer.cpp">
